# hive

./: .gitignore  Cargo.toml  README.md  Trunk.toml  Trunk_release.toml  build.sh  index.html
hive/: index.html
hive/js/: app.js  hivecanvas.js
hive/js/ai/: aiminimax.js  evaluator.js  minimax_worker.js  queenevaluator.js  tournament.js
hive/js/core/: board.js  movelist.js  piece.js
hive/js/hive/: hive.js  hivecanvas.js  move.js  movenode.js  piece.js
hive/js/hive/ai/: aiminimax.js  queenevaluator.js
hive/js/hive/core/: board.js  movelist.js  piece.js  timer.js
hive/js/hive/player/: aiplayer.js  canvasplayer.js  localplayer.js  onlineplayer.js  player.js
hive/js/player/: aiplayer.js  canvasplayer.js  onlineplayer.js
hive/pkg/: hive.js  hive_bg.wasm
js/: app.js
js/hive/: hivecanvas.js
js/hive/ai/: aiminimax.js  queenevaluator.js
js/hive/core/: board.js  piece.js
js/hive/player/: aiplayer.js  canvasplayer.js  onlineplayer.js  player.js
src/: lib.rs  main.rs  piece.rs
