[package]
name = "hive"
version = "0.1.0"
authors = ["Vinícius Sousa Fazio <contato@td.eti.br>"]
edition = "2021"
description = "Hive game"
repository = "https://github.com/viniciusfazio/hive/"
license = "GPL-3"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.91"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
